# omi-isa

./: .gitignore  .lia.cache  .nia.cache  01_COSMOLOGY.md  02_FOUNDATIONS.md  03_MATHEMATICS.md  04_ARCHITECTURE.md  05_IMPLEMENTATION.md  2026-07-05-Cost_Comparison_Welfare_vs_Taxes_vs_Corruption.md  AGENTS.md  ANCHORED_SUMMARY.md  GL(16,2) Orbit Execution Model — Complete Write-Up.md  LICENSE  Makefile  README.md  asm.c  ast.c  boot.c  bootstrap-compiler.omi  compiler.c  cpu.c  cpu.h  gauge_exec.h  isa.h  lexer.c  loader.c  loader.h  main.c  omi_dispatch.c  omi_mesh.c  omi_mesh.h  omi_orbit.c  omi_orbit.h  omi_probe.c  omi_receipt.c  omi_receipt.h  omi_toolchain  omi_transport.c  omi_transport.h  omi_transport_lora.c  (+29 more)
dev-docs/: 06-SUMMARY.MD  2026-07-05-Cost_Comparison_Welfare_vs_Taxes_vs_Corruption.md  Delta Orbit Theory as a Quotient Category of Finite Dynamical Incidence Systems.tex  OMI_ISA_DOCUMENT_ALIGNMENT.md  session-ses_0cc9.md  session-ses_0cec.md
docs/: 00_Vision.md  METATRON_WITNESS_PORT.md  NULL_RING_PORT.md  TETRAGRAMMATRON_GOVERN_PORT.md  TETRAGRAMMATRON_WITNESS_PORT.md  architecture.md  isa-spec.md  mesh-protocol.md  proof-lineage.md
firmware/: CMakeLists.txt  README.md  platformio.ini
firmware/main/: CMakeLists.txt  main.cpp  omi_esp_transport.cpp  omi_esp_transport.h  omi_sx1262.cpp  omi_sx1262.h
lib/: asm.c  ast.h  boot.c  compiler.c  gauge_exec.c  isa.h  lexer.c  lexer.h  omi_dispatch.h  omi_omion.c  omi_omion.h  omi_pg.c  omi_pg.h  omi_probe.h  omi_sense.c  omi_sense.h  omi_transport_lora.c  omicron.c  sector.c  sector.h  stream.h
(+116 files in other folders)
