idf_component_register(
    SRCS
        "main.cpp"
        "omi_sx1262.cpp"
        "omi_esp_transport.cpp"
        "../../lib/omienv.c"
        "../../lib/stream.c"
        "../../lib/sector.c"
        "../../lib/omi_dispatch.c"
        "../../lib/omi_transport.c"
        "../../lib/gauge_exec.c"
        "../../lib/cpu.c"
        "../../lib/boot.c"
        "../../lib/omi_mesh.c"
    INCLUDE_DIRS
        "."
        "../../lib"
    REQUIRES
        driver
        nvs_flash
        freertos
)
